# NoCode_Project

./: .firebaserc  .gitignore  BACKEND_PLAN.md  DEVELOPMENT_PLAN.md  FRONTEND_PLAN.md  README.md  REQUIREMENTS.md  TASK_LIST.md
.claude/: settings.local.json
.github/workflows/: azure-static-web-apps-gray-bay-05c35e200.yml  daily-ai-report.yml  daily-snapshot.yml  deploy-azure-functions.yml  deploy-backend.yml  deploy-python-backend.yml  deploy-shioaji.yml  monthly-ndc-scraper.yml  restart-python-backend.yml  test-ndc-scrape.yml
Back-End/: CLAUDE.md  Task_Backend.md
Back-End/.claude/: settings.json  (+1 more)
Back-End/Shioaji_API/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  startup.sh
Back-End/Shioaji_API/src/shioaji_api/: main.py
Back-End/Shioaji_API/src/shioaji_api/core/: config.py  manager.py
Back-End/Shioaji_API/src/shioaji_api/routers/: health.py  index.py  kline.py  quote.py  stocks.py
Back-End/Shioaji_API/src/shioaji_api/schemas/: market.py
Docs/: Azure-Deployment.md  Backend-Async-Blocking-IO-Fix-Plan.md  Backend-Node.md  CODE_REVIEW_OPTIMIZATION.md  Cloud-Deployment.md  Financial Model Expansion Roadmap.md  Frontend-React.md  REQUIREMENTS.md  Risk and Rebalancing Model.md  TASK_LIST.md  Trading-Strategy-Enhancement.md  啟動指令.md
Front-End/: CLAUDE.md  FRONTEND_PLAN.md  Task_Frontend.md
Skill/: Backend-Node.md  Frontend-Reat.md  UIUX_Designer.md
azure-functions/: .gitignore  function_app.py  requirements.txt  run_scraper.py
backend/: package-lock.json
frontend/: package.json
ui-samples/: StockOverviewPage_1.html
(+344 files in other folders)
