[project]
name = "shioaji-api"
version = "0.1.0"
description = "Shioaji FastAPI microservice for Taiwan stock market data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "shioaji>=1.3.3",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shioaji_api"]

[project.scripts]
start = "shioaji_api.main:run"
dev = "shioaji_api.main:dev"
